--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@piwikpro/next-piwik-pro": "^1.0.4",
     "classnames": "^2.3.2",
     "lunr": "^2.3.9",
     "next": "12.3.1",
+    "next-transpile-modules": "^10.0.1",
     "node-sass": "^7.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
