--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@piwikpro/next-piwik-pro": "^1.0.4",
+    "@piwikpro/next-piwik-pro": "^3.1.1",
     "classnames": "^2.3.2",
-    "next": "12.3.1",
+    "next": "^14.2.7",
     "next-transpile-modules": "^10.0.1",
-    "node-sass": "^7.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.55.0"
